--- a/styles.css
+++ b/styles.css
@@ -30,3 +30,32 @@ h2 {
     margin-top: -2px;
     margin-bottom: 2px;
 }
+
+
+
+
+
+#main {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+#okno {
+  width: 300px;
+  height: 50px;
+  text-align: center;
+  padding: 15px;
+  border: 3px solid #0000cc;
+  border-radius: 10px;
+  color: #0000cc;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+}
+#main:target {display: block;}
