--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@ h2 {
   padding: 15px;
   border: 3px solid #0000cc;
   border-radius: 10px;
+  background-color: pink;
   color: #0000cc;
   position: absolute;
   top: 0;
